--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "webpack-dev-server",
-    "build": "webpack",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "webpack-dev-server --config build/webpack.dev.js",
+    "build:prod": "webpack --config build/webpack.prod.js"
   },
   "repository": {
     "type": "git",
@@ -26,24 +25,37 @@
     "iOS >= 7",
     "Android >= 4.0"
   ],
+  "sideEffects": [
+    "*.css",
+    "*.vue",
+    "*.less"
+  ],
   "devDependencies": {
     "@babel/core": "^7.4.4",
     "@babel/preset-env": "^7.16.11",
     "autoprefixer": "^10.3.1",
     "babel-loader": "^8.2.3",
+    "clean-webpack-plugin": "^4.0.0",
     "core-js": "^3.21.0",
     "css-loader": "^5.2.7",
     "file-loader": "^6.2.0",
+    "hard-source-webpack-plugin": "^0.13.1",
     "html-webpack-plugin": "^4.5.2",
     "less-loader": "^7.3.0",
+    "mini-css-extract-plugin": "^1.6.2",
+    "optimize-css-assets-webpack-plugin": "^6.0.1",
     "postcss-loader": "^4.3.0",
     "style-loader": "^2.0.0",
+    "terser-webpack-plugin": "^4.2.3",
+    "thread-loader": "^3.0.4",
+    "ts-loader": "^8.3.0",
     "url-loader": "^4.1.1",
     "vue-loader": "^15.7.0",
     "vue-template-compiler": "^2.6.14",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.11.2"
+    "webpack-dev-server": "^3.11.2",
+    "webpack-merge": "^5.8.0"
   },
   "dependencies": {
     "vue": "^2.6.14",
