--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "core-js": "^3.21.0",
     "css-loader": "^5.2.7",
     "file-loader": "^6.2.0",
+    "friendly-errors-webpack-plugin": "^1.7.0",
     "hard-source-webpack-plugin": "^0.13.1",
     "html-webpack-plugin": "^4.5.2",
     "less-loader": "^7.3.0",
