--- a/package.json
+++ b/package.json
@@ -56,7 +56,8 @@
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.11.2",
-    "webpack-merge": "^5.8.0"
+    "webpack-merge": "^5.8.0",
+    "webpack-sources": "^3.2.3"
   },
   "dependencies": {
     "vue": "^2.6.14",
