--- a/package.json
+++ b/package.json
@@ -63,5 +63,8 @@
     "vue": "^2.6.14",
     "vue-router": "^3.5.2",
     "vuex": "^3.6.2"
+  },
+  "gitHooks": {
+    "commit-msg": "npm run lint"
   }
 }
