--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "webpack-dev-server --config build/webpack.dev.js",
-    "build:prod": "webpack --config build/webpack.prod.js"
+    "build:prod": "webpack --config build/webpack.prod.js",
+    "commitlint": "commitlint --config commitlint.config.js -e -V"
   },
   "repository": {
     "type": "git",
@@ -65,13 +66,22 @@
     "vue-router": "^3.5.2",
     "vuex": "^3.6.2"
   },
-  "gitHooks": {
-    "pre-commit": "lint-staged"
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged",
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+    }
   },
   "lint-staged": {
     "*.{js,jsx,vue,ts,tsx}": [
-      "npm run lint",
+      "prettier --write",
+      "eslint --cache --fix",
       "git add"
     ]
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-customizable"
+    }
   }
 }
