feat: 添加splitChunks和打包文件分析功能

--- a/package.json
+++ b/package.json
@@ -36,21 +36,30 @@
   ],
   "devDependencies": {
     "@babel/core": "^7.4.4",
+    "@babel/eslint-parser": "^7.17.0",
     "@babel/preset-env": "^7.16.11",
+    "@commitlint/cli": "^16.2.1",
+    "@commitlint/config-conventional": "^16.2.1",
     "autoprefixer": "^10.3.1",
     "babel-loader": "^8.2.3",
     "clean-webpack-plugin": "^4.0.0",
     "core-js": "^3.21.0",
     "css-loader": "^5.2.7",
+    "eslint": "^8.10.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-vue": "^8.5.0",
     "file-loader": "^6.2.0",
     "friendly-errors-webpack-plugin": "^1.7.0",
     "hard-source-webpack-plugin": "^0.13.1",
     "html-webpack-plugin": "^4.5.2",
     "husky": "^7.0.4",
     "less-loader": "^7.3.0",
+    "lint-staged": "^12.3.4",
     "mini-css-extract-plugin": "^1.6.2",
     "optimize-css-assets-webpack-plugin": "^6.0.1",
     "postcss-loader": "^4.3.0",
+    "prettier": "^2.5.1",
     "style-loader": "^2.0.0",
     "terser-webpack-plugin": "^4.2.3",
     "thread-loader": "^3.0.4",
@@ -59,6 +68,7 @@
     "vue-loader": "^15.7.0",
     "vue-template-compiler": "^2.6.14",
     "webpack": "^4.46.0",
+    "webpack-bundle-analyzer": "^4.5.0",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.11.2",
     "webpack-merge": "^5.8.0",
