--- a/package.json
+++ b/package.json
@@ -43,8 +43,10 @@
     "autoprefixer": "^10.3.1",
     "babel-loader": "^8.2.3",
     "clean-webpack-plugin": "^4.0.0",
+    "commitizen": "^4.2.4",
     "core-js": "^3.21.0",
     "css-loader": "^5.2.7",
+    "cz-customizable": "^6.3.0",
     "eslint": "^8.10.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
