--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "webpack-sources": "^3.2.3"
   },
   "dependencies": {
+    "lottie-web": "^5.9.4",
     "vue": "^2.6.14",
     "vue-router": "^3.5.2",
     "vuex": "^3.6.2"
